--- a/style.css
+++ b/style.css
@@ -1,34 +1,23 @@
-img {
-    display: none;
-    width: 80%;
-    height: 80%;
+
+
+label {
+  padding: 10px 15px;
+  background: #f2f2f2;
+  color: #4D4D4D;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 14px;
+  text-align: center;
+  -webkit-border-radius: 6px 6px 0px 0px;
+  border-radius: 6px 6px 0px 0px;
 }
-
-
-/* Next & previous buttons */
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
+input[name=content] {
+  display:none;
+}
+input[name=content] +div {
+  display:none;
+}
+input[name=content]:checked +div {
+  display:block;
+}
   
