--- a/style.css
+++ b/style.css
@@ -1,23 +1,57 @@
+body {
+  background-color: #000000;
+  color: #ffffff;
+}
 
+
+#nav {
+  margin: 0 auto;
+  width: 90%;
+  /* border: 1px solid red; */
+  text-align: center;
+
+}
 
 label {
-  padding: 10px 15px;
-  background: #f2f2f2;
-  color: #4D4D4D;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 14px;
+  margin: 0 auto;
+  padding: 0;
+  display: inline-block;
+  width: 30%;
   text-align: center;
-  -webkit-border-radius: 6px 6px 0px 0px;
-  border-radius: 6px 6px 0px 0px;
+  /* border: 1px solid red; */
+  color: #ffffff;
+  /* padding: 10px 15px; */
+  /* background: #f2f2f2; */
+  /* color: #4D4D4D; */
+  /* text-decoration: none; */
+  /* font-weight: bold; */
+  /* font-size: 14px; */
+  /* text-align: center; */
+  /* -webkit-border-radius: 6px 6px 0px 0px; */
+  /* border-radius: 6px 6px 0px 0px; */
 }
+
+label:hover {
+  border-bottom: 2px solid yellow;
+}
+
 input[name=content] {
-  display:none;
+  display: none;
 }
-input[name=content] +div {
-  display:none;
+
+input[name=content]+div {
+  display: none;
 }
-input[name=content]:checked +div {
-  display:block;
+
+input[name=content]:checked+div {
+  display: block;
 }
-  
+
+div img {
+  /* border-radius: 100px; */
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+  /* top: 0; */
+}
