--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ input[name=content]+div {
 
 input[name=content]:checked+div {
   display: block;
+  width: 80%;
+  margin: 0 auto;
 }
 
 div img {
@@ -54,4 +56,14 @@ div img {
   height: auto;
   margin: 0 auto;
   /* top: 0; */
+}
+
+footer {
+  width: 80%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+#copyright {
+  color: blue;
 }
