--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
   background-color: #000000;
   color: #ffffff;
+  
 }
 
 
 #nav {
   margin: 0 auto;
-  width: 90%;
-  /* border: 1px solid red; */
+  width: 100%;
+  border: 1px solid red;
   text-align: center;
 
 }
@@ -18,7 +19,7 @@ label {
   display: inline-block;
   width: 30%;
   text-align: center;
-  /* border: 1px solid red; */
+  border: 1px solid red;
   color: #ffffff;
   /* padding: 10px 15px; */
   /* background: #f2f2f2; */
@@ -61,9 +62,11 @@ div img {
 footer {
   bottom: 0;
   position: fixed;
-  width: 80%;
+  width: 100%;
   text-align: center;
   margin: 0 auto;
+  border: 1px solid red;
+
 }
 
 #copyright {
